--- a/Client/twiths_/Base.lproj/Main.storyboard
+++ b/Client/twiths_/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="pKF-2G-iia" kind="presentation" identifier="tour_detail" trigger="accessoryAction" id="8Yq-Wo-vKJ"/>
+                                    <segue destination="pKF-2G-iia" kind="presentation" identifier="tour_detail" id="d3H-D9-Th8"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
