메인 스토리보드 및 대부분 스토리보드 수정(언와인드 세그웨이 형식으로)

--- a/Client/twiths_/Storyboard/TourCreate.storyboard
+++ b/Client/twiths_/Storyboard/TourCreate.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ogu-A7-Gjs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xa7-RQ-g9G">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,22 +10,22 @@
     </dependencies>
     <scenes>
         <!--투어 올리기-->
-        <scene sceneID="nOH-Fv-CsX">
+        <scene sceneID="4aw-oP-eN0">
             <objects>
-                <tableViewController id="04I-84-yuo" customClass="TourCreateVC" customModule="twiths_" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="9U0-VO-5EX">
+                <tableViewController id="fVC-7k-4Ig" customClass="TourCreateVC" customModule="twiths_" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Mj5-wU-R4S">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="281" id="BHw-Zc-x0S">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="281" id="3xE-4i-0OR">
                                 <rect key="frame" x="0.0" y="28" width="375" height="281"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BHw-Zc-x0S" id="SA2-td-d3w">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3xE-4i-0OR" id="LBG-oq-tof">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="280.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="투어 CREATE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3lU-wS-tJC">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="투어 CREATE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J4y-UQ-NYi">
                                             <rect key="frame" x="75" y="112" width="259" height="57"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="47"/>
@@ -37,34 +37,43 @@
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="04I-84-yuo" id="hiw-fc-Yb9"/>
-                            <outlet property="delegate" destination="04I-84-yuo" id="wJV-Ly-6ga"/>
+                            <outlet property="dataSource" destination="fVC-7k-4Ig" id="0Ul-Tz-ld2"/>
+                            <outlet property="delegate" destination="fVC-7k-4Ig" id="Rmq-ZA-kD8"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="투어 올리기" id="Wcv-kb-qgU">
-                        <barButtonItem key="leftBarButtonItem" title="취소" id="wmJ-4b-j34"/>
-                        <barButtonItem key="rightBarButtonItem" title="올리기" id="AeU-jz-CY4"/>
+                    <navigationItem key="navigationItem" title="투어 올리기" id="wSn-Xw-fyD">
+                        <barButtonItem key="leftBarButtonItem" title="취소" id="hhZ-5I-3st">
+                            <connections>
+                                <segue destination="elV-Nf-Y4N" kind="unwind" unwindAction="TourListToTourCreateWithSegue:" id="Ebt-kV-Ot2"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="올리기" id="2bx-Ev-Ukz">
+                            <connections>
+                                <segue destination="elV-Nf-Y4N" kind="unwind" unwindAction="TourListToTourCreateWithSegue:" id="8Ou-i8-32O"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RaP-8G-d5t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fSu-xu-WhY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="elV-Nf-Y4N" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1290" y="815"/>
+            <point key="canvasLocation" x="2241" y="877"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="vOg-BO-Sah">
+        <scene sceneID="rlh-Qf-4zG">
             <objects>
-                <navigationController storyboardIdentifier="TourCreate" id="ogu-A7-Gjs" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Q2o-YR-cuj">
+                <navigationController storyboardIdentifier="TourCreate" id="xa7-RQ-g9G" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VKi-mt-5BN">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="04I-84-yuo" kind="relationship" relationship="rootViewController" id="1VM-BF-m6H"/>
+                        <segue destination="fVC-7k-4Ig" kind="relationship" relationship="rootViewController" id="Nxb-Xe-iwW"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0q7-he-TdT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M2h-GV-VWq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="457" y="815"/>
+            <point key="canvasLocation" x="1409" y="877"/>
         </scene>
     </scenes>
 </document>
