--- a/Client/twiths_/Base.lproj/Main.storyboard
+++ b/Client/twiths_/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="pKF-2G-iia" kind="presentation" identifier="tour_detail" id="d3H-D9-Th8"/>
+                                    <segue destination="pKF-2G-iia" kind="show" id="i3D-vI-gNc"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -49,7 +49,7 @@
                         <barButtonItem key="backBarButtonItem" title="Back" id="v9R-XR-7Ax"/>
                         <barButtonItem key="leftBarButtonItem" systemItem="add" id="3rf-di-oiJ">
                             <connections>
-                                <segue destination="Jqe-dL-mAd" kind="presentation" identifier="" id="3Mg-ry-tFK"/>
+                                <segue destination="Ulq-7T-ZiY" kind="presentation" id="L98-cQ-S6C"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="편집" id="cHa-eo-2Js"/>
@@ -59,6 +59,14 @@
             </objects>
             <point key="canvasLocation" x="1408.8" y="-39.130434782608695"/>
         </scene>
+        <!--TourCreate-->
+        <scene sceneID="C08-ZN-8X8">
+            <objects>
+                <viewControllerPlaceholder storyboardName="TourCreate" id="Ulq-7T-ZiY" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0dO-tA-y4f" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1479" y="475"/>
+        </scene>
         <!--Tour-->
         <scene sceneID="Jxa-AJ-gGj">
             <objects>
@@ -66,14 +74,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ObS-de-cDD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2118" y="-146"/>
-        </scene>
-        <!--TourCreate-->
-        <scene sceneID="pW0-aG-1Sm">
-            <objects>
-                <viewControllerPlaceholder storyboardName="TourCreate" referencedIdentifier="TourCreate" id="Jqe-dL-mAd" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sZi-56-THC" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1439" y="431"/>
         </scene>
         <!--Mypage-->
         <scene sceneID="oIR-Th-Chx">
