--- a/Client/twiths_/Storyboard/Tour.storyboard
+++ b/Client/twiths_/Storyboard/Tour.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bL3-f5-AND">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IeA-wt-GRB">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,7 +9,23 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--투어제목-->
+        <!--Navigation Controller-->
+        <scene sceneID="kCn-P3-CHP">
+            <objects>
+                <navigationController id="IeA-wt-GRB" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="f9K-ck-OMj">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="bL3-f5-AND" kind="show" id="MU7-4a-ant"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d8Z-gQ-oNS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2551" y="-27"/>
+        </scene>
+        <!--Title-->
         <scene sceneID="CzP-r1-s0X">
             <objects>
                 <tableViewController storyboardIdentifier="Tour" id="bL3-f5-AND" customClass="LandmarkListVC" customModule="twiths_" customModuleProvider="target" sceneMemberID="viewController">
@@ -82,10 +98,10 @@
                             <outlet property="delegate" destination="bL3-f5-AND" id="dl0-rl-mLH"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="투어제목" id="s6k-5Q-u85">
-                        <barButtonItem key="rightBarButtonItem" title="투어 정보" id="5Zo-yi-5fa">
+                    <navigationItem key="navigationItem" title="Title" id="qFj-fa-UqI">
+                        <barButtonItem key="rightBarButtonItem" title="About" id="Imd-lo-swv">
                             <connections>
-                                <segue destination="eEr-BZ-yra" kind="presentation" identifier="TourInfoGO" id="Nhn-Nz-lmx"/>
+                                <segue destination="28O-iw-dda" kind="presentation" id="QXA-Qb-Tib"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -93,50 +109,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9e5-Wt-awx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3829.5999999999999" y="-27.436281859070466"/>
-        </scene>
-        <!--Tour InfoVC-->
-        <scene sceneID="X6M-gD-fKJ">
-            <objects>
-                <tableViewController id="eEr-BZ-yra" customClass="TourInfoVC" customModule="twiths_" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="1nw-tb-MWd">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="ETk-qE-1eT" detailTextLabel="baA-8A-o5u" rowHeight="48" style="IBUITableViewCellStyleValue1" id="wcy-pk-5Yh">
-                                <rect key="frame" x="0.0" y="28" width="375" height="48"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wcy-pk-5Yh" id="B8E-M5-4Fa">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="47.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ETk-qE-1eT">
-                                            <rect key="frame" x="16" y="14" width="33.5" height="20.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="baA-8A-o5u">
-                                            <rect key="frame" x="315" y="14" width="44" height="20.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="eEr-BZ-yra" id="kGL-Na-SgJ"/>
-                            <outlet property="delegate" destination="eEr-BZ-yra" id="IyI-El-zkE"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7l3-EH-gn3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3517.5999999999999" y="-1272.4137931034484"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="hAV-Ap-U03">
@@ -181,7 +153,59 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NN8-hD-UVM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5703.1999999999998" y="-750.67466266866575"/>
+            <point key="canvasLocation" x="5996" y="-882"/>
+        </scene>
+        <!--Tour 정보-->
+        <scene sceneID="u7T-wK-9Fo">
+            <objects>
+                <tableViewController id="gdw-B2-237" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6Cw-vr-ppU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="L8i-T7-3vS">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="L8i-T7-3vS" id="Ztu-fa-c3r">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="gdw-B2-237" id="DLb-SZ-Eed"/>
+                            <outlet property="delegate" destination="gdw-B2-237" id="CMC-0V-Eks"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Tour 정보" id="qLj-ob-42B">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="dnt-Bz-1Mu">
+                            <connections>
+                                <segue destination="TS2-en-4eM" kind="unwind" unwindAction="TourListToLandmarkInfoWithSegue:" id="KCH-4g-EAm"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ows-1I-O1J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="TS2-en-4eM" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="3830" y="-1230"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="mVF-Vs-dLA">
+            <objects>
+                <navigationController id="28O-iw-dda" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="P0t-IX-xGa">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="gdw-B2-237" kind="relationship" relationship="rootViewController" id="5kE-Vy-wuu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i6Q-rh-2nT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2878" y="-1230"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0fH-hy-Tsp">
@@ -197,7 +221,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u3v-9t-rC7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4755" y="-750"/>
+            <point key="canvasLocation" x="5046" y="-882"/>
         </scene>
         <!--투어제목-->
         <scene sceneID="iwW-CG-9Ks">
