--- a/Client/twiths_/Base.lproj/Main.storyboard
+++ b/Client/twiths_/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="pKF-2G-iia" kind="show" id="i3D-vI-gNc"/>
+                                    <segue destination="pKF-2G-iia" kind="show" identifier="tour_detail" id="i3D-vI-gNc"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
