--- a/Client/twiths_/Storyboard/Tour.storyboard
+++ b/Client/twiths_/Storyboard/Tour.storyboard
@@ -110,7 +110,7 @@
             </objects>
             <point key="canvasLocation" x="3829.5999999999999" y="-27.436281859070466"/>
         </scene>
-        <!--Root View Controller-->
+        <!--랜드마크 정보-->
         <scene sceneID="hAV-Ap-U03">
             <objects>
                 <tableViewController id="z0G-Nh-f0w" customClass="LandmarkInfoVC" customModule="twiths_" customModuleProvider="target" sceneMemberID="viewController">
@@ -174,13 +174,20 @@
                             <outlet property="delegate" destination="z0G-Nh-f0w" id="YRF-32-K8G"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="Fdd-6A-avz"/>
+                    <navigationItem key="navigationItem" title="랜드마크 정보" id="eVQ-ox-NZp">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="NSD-Jp-ku9">
+                            <connections>
+                                <segue destination="wbB-e2-NSr" kind="unwind" unwindAction="TourListToLandmarkInfoWithSegue:" id="N4q-Fw-nsy"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NN8-hD-UVM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="wbB-e2-NSr" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="5996" y="-882.00899550224892"/>
         </scene>
-        <!--Tour 정보-->
+        <!--투어 정보-->
         <scene sceneID="u7T-wK-9Fo">
             <objects>
                 <tableViewController id="gdw-B2-237" customClass="TourInfoVC" customModule="twiths_" customModuleProvider="target" sceneMemberID="viewController">
@@ -236,7 +243,7 @@
                             <outlet property="delegate" destination="gdw-B2-237" id="CMC-0V-Eks"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Tour 정보" id="qLj-ob-42B">
+                    <navigationItem key="navigationItem" title="투어 정보" id="qLj-ob-42B">
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="dnt-Bz-1Mu">
                             <connections>
                                 <segue destination="TS2-en-4eM" kind="unwind" unwindAction="TourListToLandmarkInfoWithSegue:" id="KCH-4g-EAm"/>
